// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datasets API Approval request should change state to approved as super admin 1`] = `
Object {
  "body": Object {
    "state": "approved",
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Approval request should change state to disapproved as super admin 1`] = `
Object {
  "body": Object {
    "state": "disapproved",
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Approval request should change state to undefined as super admin 1`] = `
Object {
  "body": Object {},
  "statusCode": 200,
}
`;

exports[`Datasets API Approval request should change state to undefined as team admin 1`] = `
Object {
  "body": Object {},
  "statusCode": 200,
}
`;

exports[`Datasets API Approval request should not allow team admin to change state to approved 1`] = `
Object {
  "body": Object {
    "message": "No permission to change state to approved",
  },
  "statusCode": 500,
}
`;

exports[`Datasets API Approval request should not allow team admin to change state to disapproved 1`] = `
Object {
  "body": Object {
    "message": "No permission to change state to disapproved",
  },
  "statusCode": 500,
}
`;

exports[`Datasets API Draft should check mandatory settings 1`] = `
Object {
  "body": Object {
    "error": "Your data must contain at least one number field to display the area chart.",
  },
  "statusCode": 400,
}
`;

exports[`Datasets API Draft should save dataset copy 1`] = `
Object {
  "body": Object {
    "success": true,
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Get should return pokemon 1 dataset 1`] = `
Object {
  "body": Object {
    "dataset": Object {
      "JSONPath": "undefined",
      "_otherSources": Array [],
      "_team": Object {
        "admin": Array [
          "5a42bf07d3bc0b20648290e0",
        ],
        "brandColor": Object {
          "label": "#2A2A2A",
          "select": "#2A2A2A",
        },
        "colorPalette": Array [
          "#1B6DFC",
          "#0CB7FA",
          "#FA79FC",
          "#FB3705",
          "#F9D307",
          "#FA9007",
          "#7D5807",
          "#B2E606",
          "#069908",
          "#7B07FD",
        ],
        "datasourceDescriptions": Array [
          "5a42c26e303770207ce8f83b",
          "5b033d64ef29594d18bb18aa",
        ],
        "font": "calibre",
        "hasEnterpriseLicense": false,
        "pages": Array [
          "5ac26b456f8073766713bcee",
          "5ac26b3d6f8073766713bced",
          "5ac26b506f8073766713bcef",
          "5ac26b636f8073766713bcf0",
          "aaa26b456f8073766713bcee",
        ],
        "sites": Array [],
        "subdomain": "glitter",
        "superTeam": true,
        "title": "Glitter",
      },
      "author": Object {
        "_articleEditors": Array [],
        "_articleViewers": Array [],
        "_editors": Array [],
        "_siteEditors": Array [],
        "_siteViewers": Array [],
        "_team": Array [
          "5a42bf30d3bc0b20648290e1",
        ],
        "_viewers": Array [],
        "activated": true,
        "active": true,
        "canCreateNewArticle": Array [],
        "canCreateNewSite": Array [],
        "canCreateNewViz": Array [],
        "defaultLoginTeam": "5a42bf30d3bc0b20648290e1",
        "email": "user@schemadesign.com",
        "firstName": "Maitland",
        "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
        "lastName": "McConnell",
        "lockUntil": 1,
        "loginAttempts": 0,
        "provider": "local",
        "salt": "test",
        "sampleImported": false,
        "signedUp": false,
      },
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "clones": 0,
      "columns": Array [
        Object {
          "data_type": "Text",
          "name": "Image URL",
          "operation": "ToString",
        },
        Object {
          "data_type": "Number",
          "name": "Max HP",
          "operation": "ToInteger",
        },
        Object {
          "data_type": "Number",
          "name": "Max CP",
          "operation": "ToInteger",
        },
        Object {
          "data_type": "Text",
          "name": "Type 2",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Type 1",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Name",
          "operation": "ToString",
        },
        Object {
          "data_type": "Number",
          "name": "Pokemon No_",
          "operation": "ToInteger",
        },
      ],
      "contentEdited": false,
      "createdFields": Array [],
      "customFieldsToProcess": Array [],
      "dirty": 0,
      "fe_displayTitleOverrides": Object {
        "Type 1": "Type1_overridden",
      },
      "fe_excludeFields": Object {
        "Image URL": false,
        "Max CP": false,
        "Max HP": false,
        "Name": false,
        "Pokemon No_": false,
        "Type 1": false,
        "Type 2": false,
      },
      "fe_excludeFieldsObjDetail": Object {
        "Image URL": false,
        "Max CP": false,
        "Max HP": false,
        "Name": false,
        "Pokemon No_": false,
        "Type 1": false,
        "Type 2": false,
      },
      "fe_fieldDisplayOrder": Array [],
      "fe_filters": Object {
        "default": Object {},
        "excludeFields": Array [],
        "fabricated": Array [],
        "fieldsAsRangeSlider": Array [],
        "fieldsCommaSeparatedAsIndividual": Array [],
        "fieldsMultiSelectable": Array [],
        "fieldsNotAvailable": Array [],
        "fieldsSortableByInteger": Array [],
        "fieldsSortableInReverseOrder": Array [],
        "keywords": Array [],
        "valuesToExcludeByOriginalKey": Object {
          "_all": Array [],
        },
      },
      "fe_image": Object {
        "detailView": true,
        "field": "",
        "gallery": true,
        "overwrite": false,
        "scraped": false,
        "timeline": true,
      },
      "fe_listed": true,
      "fe_nestedObject": Object {
        "criteria": Object {},
        "fields": Array [],
      },
      "fe_viewOptions": Object {
        "enableAccessibility": false,
        "enableLastUpdated": false,
        "filtersRail": true,
        "fullscreenExpand": true,
        "insightsExplorer": true,
        "insightsExplorerEmbed": true,
        "search": true,
        "viewControls": true,
        "viewInteractivity": true,
      },
      "fe_views": Object {
        "default_view": "gallery",
        "views": Object {
          "gallery": Object {
            "defaultSortByColumnName": "Image URL",
            "visible": true,
          },
          "pieChart": Object {
            "defaultGroupByColumnName": "Name",
            "visible": true,
          },
          "pieSet": Object {
            "defaultAggregateByColumnName": "Max HP",
            "defaultChartByColumnName": "Type 1",
            "defaultGroupByColumnName": "Type 2",
            "fieldsNotAvailableAsAggregateByColumns": Array [],
            "fieldsNotAvailableAsChartByColumns": Array [],
            "fieldsNotAvailableAsGroupByColumns": Array [],
            "valuesToExcludeByOriginalKey": Array [],
            "visible": true,
          },
          "timeline": Object {
            "visible": true,
          },
          "treemap": Object {
            "defaultAggregateByColumnName": "Max HP",
            "defaultChartByColumnName": "Name",
            "defaultGroupByColumnName": "Type 1",
            "fieldsNotAvailableAsAggregateByColumns": Array [],
            "fieldsNotAvailableAsChartByColumns": Array [],
            "fieldsNotAvailableAsGroupByColumns": Array [],
            "visible": true,
          },
        },
      },
      "fe_visible": true,
      "fileName": "pokemonGO.csv",
      "firstImport": 0,
      "format": "CSV",
      "importRevision": 1,
      "imported": true,
      "includeEmptyFields": true,
      "isPublic": true,
      "jobId": 0,
      "lastImportInitiatedBy": null,
      "lastImportTriggeredBy": "manual",
      "objectTitle": "Pokemon No_",
      "openDownload": false,
      "permissions": Array [
        "seeFields",
        "seeFilters",
        "seeContent",
        "seeViews",
        "seeStandardViews",
        "seeSettings",
        "editFields",
        "editViews",
        "editGeneralSettings",
        "editObjectDetail",
        "useStandardImport",
        "useStandardSaveColumns",
        "useStandardGet",
      ],
      "preserveEditedData": true,
      "previous_datasets": Array [],
      "raw_rowObjects_coercionScheme": Object {
        "Image URL": Object {
          "operation": "ToString",
        },
        "Max CP": Object {
          "operation": "ToInteger",
        },
        "Max HP": Object {
          "operation": "ToInteger",
        },
        "Name": Object {
          "operation": "ToString",
        },
        "Pokemon No_": Object {
          "operation": "ToInteger",
        },
        "Type 1": Object {
          "operation": "ToString",
        },
        "Type 2": Object {
          "operation": "ToString",
        },
      },
      "relationshipFields": Array [],
      "replaced": false,
      "replacement": false,
      "sample": false,
      "skipImageScraping": false,
      "state": "approved",
      "tabDestination": 0,
      "title": "Pokemon",
      "uid": "pokemon",
      "updatedBy": "5a42bf07d3bc0b20648290e0",
      "updatedContent": Object {
        "created": Object {},
        "edited": Object {},
        "new": true,
        "publishedStatus": Object {},
      },
      "urls": Array [],
    },
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Get with query should get datasets associated with author "user1" 1`] = `
Object {
  "body": Object {
    "datasets": Array [
      Object {
        "author": Object {
          "firstName": "Maitland",
          "lastName": "McConnell",
        },
        "fe_filters": Object {
          "default": Object {},
          "excludeFields": Array [],
          "fabricated": Array [],
          "fieldsAsRangeSlider": Array [],
          "fieldsCommaSeparatedAsIndividual": Array [],
          "fieldsMultiSelectable": Array [],
          "fieldsNotAvailable": Array [],
          "fieldsSortableByInteger": Array [],
          "fieldsSortableInReverseOrder": Array [],
          "keywords": Array [],
          "valuesToExcludeByOriginalKey": Object {
            "_all": Array [],
          },
        },
        "fe_views": Object {
          "default_view": "gallery",
          "views": Object {
            "gallery": Object {
              "defaultSortByColumnName": "Image URL",
              "visible": true,
            },
            "pieChart": Object {
              "defaultGroupByColumnName": "Name",
              "visible": true,
            },
            "pieSet": Object {
              "defaultAggregateByColumnName": "Max HP",
              "defaultChartByColumnName": "Type 1",
              "defaultGroupByColumnName": "Type 2",
              "fieldsNotAvailableAsAggregateByColumns": Array [],
              "fieldsNotAvailableAsChartByColumns": Array [],
              "fieldsNotAvailableAsGroupByColumns": Array [],
              "valuesToExcludeByOriginalKey": Array [],
              "visible": true,
            },
            "timeline": Object {
              "visible": true,
            },
            "treemap": Object {
              "defaultAggregateByColumnName": "Max HP",
              "defaultChartByColumnName": "Name",
              "defaultGroupByColumnName": "Type 1",
              "fieldsNotAvailableAsAggregateByColumns": Array [],
              "fieldsNotAvailableAsChartByColumns": Array [],
              "fieldsNotAvailableAsGroupByColumns": Array [],
              "visible": true,
            },
          },
        },
        "firstImport": 0,
        "importRevision": 1,
        "replaced": false,
        "replacement": false,
        "sample": false,
        "title": "Pokemon",
        "uid": "pokemon",
      },
      Object {
        "author": Object {
          "firstName": "Maitland",
          "lastName": "McConnell",
        },
        "fe_filters": Object {
          "default": Object {},
          "excludeFields": Array [],
          "fabricated": Array [],
          "fieldsAsRangeSlider": Array [],
          "fieldsCommaSeparatedAsIndividual": Array [],
          "fieldsMultiSelectable": Array [],
          "fieldsNotAvailable": Array [],
          "fieldsSortableByInteger": Array [],
          "fieldsSortableInReverseOrder": Array [],
          "keywords": Array [],
          "valuesToExcludeByOriginalKey": Object {
            "_all": Array [],
          },
        },
        "fe_views": Object {
          "views": Object {},
        },
        "firstImport": 1,
        "importRevision": 1,
        "replaced": false,
        "replacement": false,
        "sample": false,
        "title": "newVizTest",
        "uid": "newviztest",
      },
      Object {
        "author": Object {
          "firstName": "Maitland",
          "lastName": "McConnell",
        },
        "fe_filters": Object {
          "default": Object {},
          "excludeFields": Array [],
          "fabricated": Array [],
          "fieldsAsRangeSlider": Array [],
          "fieldsCommaSeparatedAsIndividual": Array [],
          "fieldsMultiSelectable": Array [],
          "fieldsNotAvailable": Array [],
          "fieldsSortableByInteger": Array [],
          "fieldsSortableInReverseOrder": Array [],
          "keywords": Array [],
          "valuesToExcludeByOriginalKey": Object {
            "_all": Array [],
          },
        },
        "fe_views": Object {
          "views": Object {},
        },
        "firstImport": 1,
        "importRevision": 1,
        "replaced": false,
        "replacement": false,
        "sample": false,
        "uid": "newviz-json",
      },
      Object {
        "author": Object {
          "firstName": "Maitland",
          "lastName": "McConnell",
        },
        "fe_filters": Object {
          "default": Object {},
          "excludeFields": Array [],
          "fabricated": Array [],
          "fieldsAsRangeSlider": Array [],
          "fieldsCommaSeparatedAsIndividual": Array [],
          "fieldsMultiSelectable": Array [],
          "fieldsNotAvailable": Array [],
          "fieldsSortableByInteger": Array [],
          "fieldsSortableInReverseOrder": Array [],
          "keywords": Array [],
          "valuesToExcludeByOriginalKey": Object {
            "_all": Array [],
          },
        },
        "fe_views": Object {
          "default_view": "gallery",
          "views": Object {
            "gallery": Object {
              "defaultSortByColumnName": "Name",
              "visible": true,
            },
          },
        },
        "firstImport": 0,
        "importRevision": 1,
        "replaced": false,
        "replacement": false,
        "sample": false,
        "title": "newJSON",
        "uid": "newjson",
      },
      Object {
        "author": Object {
          "firstName": "Maitland",
          "lastName": "McConnell",
        },
        "fe_filters": Object {
          "default": Object {},
          "excludeFields": Array [],
          "fabricated": Array [],
          "fieldsAsRangeSlider": Array [],
          "fieldsCommaSeparatedAsIndividual": Array [],
          "fieldsMultiSelectable": Array [],
          "fieldsNotAvailable": Array [],
          "fieldsSortableByInteger": Array [],
          "fieldsSortableInReverseOrder": Array [],
          "keywords": Array [],
          "valuesToExcludeByOriginalKey": Object {
            "_all": Array [],
          },
        },
        "fe_views": Object {
          "default_view": "gallery",
          "views": Object {
            "gallery": Object {
              "defaultSortByColumnName": "Pokemon No_",
              "visible": true,
            },
          },
        },
        "firstImport": 0,
        "importRevision": 1,
        "replaced": false,
        "replacement": false,
        "sample": false,
        "title": "Multiple Datasets",
        "uid": "multiple-datasets",
      },
      Object {
        "author": Object {
          "firstName": "Maitland",
          "lastName": "McConnell",
        },
        "fe_filters": Object {
          "default": Object {},
          "excludeFields": Array [],
          "fabricated": Array [],
          "fieldsAsRangeSlider": Array [],
          "fieldsCommaSeparatedAsIndividual": Array [],
          "fieldsMultiSelectable": Array [],
          "fieldsNotAvailable": Array [],
          "fieldsSortableByInteger": Array [],
          "fieldsSortableInReverseOrder": Array [],
          "keywords": Array [],
          "valuesToExcludeByOriginalKey": Object {
            "_all": Array [],
          },
        },
        "fe_views": Object {
          "default_view": "gallery",
          "views": Object {
            "gallery": Object {
              "defaultSortByColumnName": "Date",
              "visible": true,
            },
          },
        },
        "firstImport": 0,
        "importRevision": 1,
        "replaced": false,
        "replacement": false,
        "sample": false,
        "title": "allDataTypesJson",
        "uid": "alldatatypesjson",
      },
    ],
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Get with query should only get the dataset for which "editorUser" has editing privledges 1`] = `
Object {
  "body": Object {
    "datasets": Array [
      Object {
        "author": Object {
          "firstName": "m3",
          "lastName": "a",
        },
        "fe_filters": Object {
          "default": Object {},
          "excludeFields": Array [],
          "fabricated": Array [],
          "fieldsAsRangeSlider": Array [],
          "fieldsCommaSeparatedAsIndividual": Array [],
          "fieldsMultiSelectable": Array [],
          "fieldsNotAvailable": Array [],
          "fieldsSortableByInteger": Array [],
          "fieldsSortableInReverseOrder": Array [],
          "keywords": Array [],
          "valuesToExcludeByOriginalKey": Object {
            "_all": Array [],
          },
        },
        "fe_views": Object {
          "default_view": "gallery",
          "views": Object {
            "gallery": Object {
              "defaultSortByColumnName": "Image URL",
              "visible": true,
            },
          },
        },
        "firstImport": 0,
        "importRevision": 1,
        "replaced": false,
        "replacement": false,
        "sample": false,
        "title": "Private Viz With Editor",
        "uid": "private-viz-with-editor",
      },
    ],
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Get with query should return 404 when passing fake id 1`] = `
Object {
  "body": Object {},
  "statusCode": 500,
}
`;

exports[`Datasets API Reimport should reimport google spreadsheet with the new columns 1`] = `
Object {
  "JSONPath": "*",
  "__v": 0,
  "_id": "5b153cc65fd1e300402ddc53",
  "_otherSources": Array [],
  "_team": Object {
    "__v": 0,
    "_id": "5a42fba8999d2a26d50fea64",
    "admin": Array [
      "5a42fb9e29232d26d47136dc",
    ],
    "brandColor": Object {
      "label": "#2A2A2A",
      "select": "#2A2A2A",
    },
    "colorPalette": Array [
      "#1B6DFC",
      "#0CB7FA",
      "#FA79FC",
      "#FB3705",
      "#F9D307",
      "#FA9007",
      "#7D5807",
      "#B2E606",
      "#069908",
      "#7B07FD",
    ],
    "createdAt": "2017-12-27T01:47:20.205Z",
    "datasourceDescriptions": Array [
      "5a42fd33999d2a26d50fea65",
      "5a42fdca29232d26d47136dd",
      "5a42fe1629232d26d4713775",
      "5b07033050f5c886278b6d2d",
    ],
    "font": "calibre",
    "hasEnterpriseLicense": false,
    "pages": Array [],
    "sites": Array [],
    "subdomain": "user",
    "superTeam": true,
    "title": "Maitland McConnell",
    "updatedAt": "2017-12-27T01:57:42.971Z",
  },
  "apiEndPoint": "https://docs.google.com/spreadsheets/d/176waNUDp0lQJcPWDvrs28qW-YCCrFFTcN5nrCIG6YXc/export?format=csv",
  "author": Object {
    "__v": 0,
    "_articleEditors": Array [],
    "_articleViewers": Array [],
    "_editors": Array [],
    "_id": "5a42fb9e29232d26d47136dc",
    "_siteEditors": Array [],
    "_siteViewers": Array [],
    "_team": Array [
      "5a42fba8999d2a26d50fea64",
    ],
    "_viewers": Array [],
    "activated": true,
    "active": true,
    "canCreateNewArticle": Array [],
    "canCreateNewSite": Array [],
    "canCreateNewViz": Array [],
    "createdAt": "2017-12-27T01:47:10.724Z",
    "datadotworldToken": Object {
      "access_token": "reaaaLY_SAfE_TOOOKEN",
      "expires_at": 1e+25,
    },
    "defaultLoginTeam": "5a42fba8999d2a26d50fea64",
    "email": "user+user2@schemadesign.com",
    "firstName": "Maitland",
    "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
    "lastName": "McConnell",
    "lockUntil": 1,
    "loginAttempts": 0,
    "pipedriveToken": Object {
      "access_token": "exTRa_SEeeciT_token",
      "expires_at": 1e+25,
    },
    "profileImageUrl": "https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg?sz=50",
    "provider": "local",
    "salesforceToken": Object {
      "access_token": "simple_token",
      "instance_url": "http://instance_url",
    },
    "salt": "test",
    "sampleImported": false,
    "signedUp": false,
    "smartsheetToken": Object {
      "access_token": "sUpEr_sECriT_ToKEN",
      "expires_at": 1e+25,
    },
    "updatedAt": "2017-12-27T01:51:41.862Z",
  },
  "brandColor": Object {
    "accent": "#005CB5",
  },
  "clones": 0,
  "columns": Array [
    Object {
      "data_type": "Number",
      "name": "col4",
      "operation": "ToInteger",
    },
    Object {
      "data_type": "Number",
      "name": "col3",
      "operation": "ToInteger",
    },
    Object {
      "data_type": "Number",
      "name": "col2",
      "operation": "ToInteger",
    },
    Object {
      "data_type": "Number",
      "name": "col1",
      "operation": "ToInteger",
    },
  ],
  "contentEdited": false,
  "createdAt": "2018-06-04T13:21:10.315Z",
  "createdFields": Array [],
  "customFieldsToProcess": Array [],
  "dirty": 1,
  "fe_displayTitleOverrides": Object {},
  "fe_excludeFields": Object {
    "col1": false,
    "col2": false,
    "col3": false,
    "col4": false,
  },
  "fe_excludeFieldsObjDetail": Object {
    "col1": false,
    "col2": false,
    "col3": false,
    "col4": false,
  },
  "fe_fieldDisplayOrder": Array [
    "col1",
    "col2",
    "col3",
    "col4",
  ],
  "fe_filters": Object {
    "default": Object {},
    "excludeFields": Array [],
    "fabricated": Array [],
    "fieldsAsRangeSlider": Array [],
    "fieldsCommaSeparatedAsIndividual": Array [],
    "fieldsMultiSelectable": Array [],
    "fieldsNotAvailable": Array [],
    "fieldsSortableByInteger": Array [],
    "fieldsSortableInReverseOrder": Array [],
    "keywords": Array [],
    "valuesToExcludeByOriginalKey": Object {
      "_all": Array [],
    },
  },
  "fe_image": Object {
    "detailView": true,
    "field": "",
    "gallery": true,
    "overwrite": false,
    "scraped": false,
    "timeline": true,
  },
  "fe_listed": false,
  "fe_nestedObject": Object {
    "criteria": Object {},
    "fields": Array [],
  },
  "fe_viewOptions": Object {
    "enableAccessibility": false,
    "enableLastUpdated": false,
    "filtersRail": true,
    "fullscreenExpand": true,
    "insightsExplorer": true,
    "insightsExplorerEmbed": true,
    "search": true,
    "viewControls": true,
    "viewInteractivity": true,
  },
  "fe_views": Object {
    "default_view": "gallery",
    "views": Object {
      "gallery": Object {
        "defaultSortByColumnName": "col1",
        "visible": true,
      },
    },
  },
  "fe_visible": true,
  "firstImport": 0,
  "format": "CSV",
  "importRevision": 1,
  "imported": true,
  "includeEmptyFields": true,
  "isPublic": false,
  "jobId": Any<Number>,
  "lastImportInitiatedBy": "5a42bf07d3bc0b20648290e0",
  "lastImportTriggeredBy": "manual",
  "objectTitle": "col1",
  "openDownload": false,
  "permissions": Array [
    "seeFields",
    "seeFilters",
    "seeContent",
    "seeViews",
    "seeStandardViews",
    "seeSettings",
    "editFields",
    "editViews",
    "editGeneralSettings",
    "editObjectDetail",
    "useStandardImport",
    "useStandardSaveColumns",
    "useStandardGet",
  ],
  "preserveEditedData": true,
  "previous_datasets": Array [],
  "raw_rowObjects_coercionScheme": Object {
    "col1": Object {
      "operation": "ToInteger",
    },
    "col2": Object {
      "operation": "ToInteger",
    },
    "col3": Object {
      "operation": "ToInteger",
    },
    "col4": Object {
      "operation": "ToInteger",
    },
  },
  "relationshipFields": Array [],
  "replaced": false,
  "replacement": false,
  "sample": false,
  "skipImageScraping": false,
  "tabDestination": 0,
  "title": "ExampleGS",
  "uid": "examplegs",
  "updatedAt": Any<String>,
  "updatedBy": "5a42bf07d3bc0b20648290e0",
  "updatedContent": Object {
    "created": Object {},
    "edited": Object {},
    "new": true,
    "publishedStatus": Object {},
  },
  "urls": Array [],
  "vizType": "standardViz",
}
`;

exports[`Datasets API Save should check mandatory settings 1`] = `
Object {
  "body": Object {
    "error": "Your data must contain at least one number field to display the area chart.",
  },
  "statusCode": 500,
}
`;

exports[`Datasets API Save should save a JSONPath and API endpoint 1`] = `
Object {
  "JSONPath": "_embedded.episodes.*",
  "__v": 0,
  "_id": "5a4ed5572a1cf29b85201bb3",
  "_otherSources": Array [],
  "_team": Object {
    "__v": 0,
    "_id": "5a42bf30d3bc0b20648290e1",
    "admin": Array [
      "5a42bf07d3bc0b20648290e0",
    ],
    "brandColor": Object {
      "label": "#2A2A2A",
      "select": "#2A2A2A",
    },
    "colorPalette": Array [
      "#1B6DFC",
      "#0CB7FA",
      "#FA79FC",
      "#FB3705",
      "#F9D307",
      "#FA9007",
      "#7D5807",
      "#B2E606",
      "#069908",
      "#7B07FD",
    ],
    "createdAt": "2017-12-26T21:29:20.384Z",
    "datasourceDescriptions": Array [
      "5a42c26e303770207ce8f83b",
      "5b033d64ef29594d18bb18aa",
    ],
    "font": "calibre",
    "hasEnterpriseLicense": false,
    "pages": Array [
      "5ac26b456f8073766713bcee",
      "5ac26b3d6f8073766713bced",
      "5ac26b506f8073766713bcef",
      "5ac26b636f8073766713bcf0",
      "aaa26b456f8073766713bcee",
    ],
    "sites": Array [],
    "subdomain": "glitter",
    "superTeam": true,
    "title": "Glitter",
    "updatedAt": "2017-12-26T21:43:10.717Z",
  },
  "apiEndPoint": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
  "author": Object {
    "__v": 0,
    "_articleEditors": Array [],
    "_articleViewers": Array [],
    "_editors": Array [],
    "_id": "5a42bf07d3bc0b20648290e0",
    "_siteEditors": Array [],
    "_siteViewers": Array [],
    "_team": Array [
      "5a42bf30d3bc0b20648290e1",
    ],
    "_viewers": Array [],
    "activated": true,
    "active": true,
    "canCreateNewArticle": Array [],
    "canCreateNewSite": Array [],
    "canCreateNewViz": Array [],
    "createdAt": "2017-12-26T21:28:39.946Z",
    "defaultLoginTeam": "5a42bf30d3bc0b20648290e1",
    "email": "user@schemadesign.com",
    "firstName": "Maitland",
    "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
    "lastName": "McConnell",
    "lockUntil": 1,
    "loginAttempts": 0,
    "provider": "local",
    "salt": "test",
    "sampleImported": false,
    "signedUp": false,
    "updatedAt": "2017-12-26T21:36:31.420Z",
  },
  "brandColor": Object {
    "accent": "#005CB5",
  },
  "clones": 0,
  "columns": Array [
    Object {
      "data_type": "Number",
      "name": "id",
      "operation": "ToInteger",
      "sample": 4952,
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Text",
      "name": "url",
      "operation": "ToString",
      "sample": "http://www.tvmaze.com/episodes/4952/game-of-thrones-1x01-winter-is-coming",
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Text",
      "name": "name",
      "operation": "ToString",
      "sample": "Winter is Coming",
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Number",
      "name": "season",
      "operation": "ToInteger",
      "sample": 1,
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Number",
      "name": "number",
      "operation": "ToInteger",
      "sample": 1,
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Text",
      "name": "type",
      "operation": "ToString",
      "sample": "regular",
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Date",
      "input_format": "YYYY-MM-DD",
      "name": "airdate",
      "operation": "ToDate",
      "output_format": "YYYY-MM-DD",
      "sample": "2011-04-17T00:00:00.000Z",
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Text",
      "name": "airtime",
      "operation": "ToString",
      "sample": "21:00",
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Date",
      "input_format": "ISO_8601",
      "name": "airstamp",
      "operation": "ToDate",
      "output_format": "YYYY-MM-DD",
      "sample": "2011-04-18T01:00:00.000Z",
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Number",
      "name": "runtime",
      "operation": "ToInteger",
      "sample": 60,
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Text",
      "name": "image_medium",
      "operation": "ToString",
      "sample": "http://static.tvmaze.com/uploads/images/medium_landscape/1/2668.jpg",
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Text",
      "name": "image_original",
      "operation": "ToString",
      "sample": "http://static.tvmaze.com/uploads/images/original_untouched/1/2668.jpg",
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Text",
      "name": "summary",
      "operation": "ToString",
      "sample": "<p>Lord Eddard Stark, ruler of the North, is summoned to court by his old friend, King Robert Baratheon, to serve as the King's Hand. Eddard reluctantly agrees after learning of a possible threat to the King's life. Eddard's bastard son Jon Snow must make a painful decision about his own future, while in the distant east Viserys Targaryen plots to reclaim his father's throne, usurped by Robert, by selling his sister in marriage.</p>",
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
    Object {
      "data_type": "Text",
      "name": "_links_self_href",
      "operation": "ToString",
      "sample": "http://api.tvmaze.com/episodes/4952",
      "sourceName": "http://api.tvmaze.com/singlesearch/shows?q=game-of-thrones&embed=episodes",
      "sourceType": "spreadsheet",
    },
  ],
  "contentEdited": false,
  "createdAt": "2018-01-05T01:31:03.251Z",
  "createdFields": Array [],
  "customFieldsToProcess": Array [],
  "dirty": 1,
  "fe_displayTitleOverrides": Object {},
  "fe_excludeFields": Object {},
  "fe_excludeFieldsObjDetail": Object {},
  "fe_fieldDisplayOrder": Array [],
  "fe_filters": Object {
    "default": Object {},
    "excludeFields": Array [],
    "fabricated": Array [],
    "fieldsAsRangeSlider": Array [],
    "fieldsCommaSeparatedAsIndividual": Array [],
    "fieldsMultiSelectable": Array [],
    "fieldsNotAvailable": Array [],
    "fieldsSortableByInteger": Array [],
    "fieldsSortableInReverseOrder": Array [],
    "keywords": Array [],
    "valuesToExcludeByOriginalKey": Object {
      "_all": Array [],
    },
  },
  "fe_image": Object {
    "detailView": true,
    "field": "",
    "gallery": true,
    "overwrite": false,
    "scraped": false,
    "timeline": true,
  },
  "fe_listed": false,
  "fe_nestedObject": Object {
    "criteria": Object {},
    "fields": Array [],
  },
  "fe_viewOptions": Object {
    "enableAccessibility": false,
    "enableLastUpdated": false,
    "filtersRail": true,
    "fullscreenExpand": true,
    "insightsExplorer": true,
    "insightsExplorerEmbed": true,
    "search": true,
    "viewControls": true,
    "viewInteractivity": true,
  },
  "fe_views": Object {
    "views": Object {},
  },
  "fe_visible": true,
  "firstImport": 1,
  "format": "JSON",
  "importRevision": 1,
  "imported": false,
  "includeEmptyFields": true,
  "isPublic": false,
  "jobId": Any<Number>,
  "lastImportInitiatedBy": "5a42bf07d3bc0b20648290e0",
  "lastImportTriggeredBy": "manual",
  "openDownload": false,
  "permissions": Array [
    "seeFields",
    "seeFilters",
    "seeContent",
    "seeViews",
    "seeStandardViews",
    "seeSettings",
    "editFields",
    "editViews",
    "editGeneralSettings",
    "editObjectDetail",
    "useStandardImport",
    "useStandardSaveColumns",
    "useStandardGet",
  ],
  "preserveEditedData": true,
  "previous_datasets": Array [],
  "raw_rowObjects_coercionScheme": Object {
    "_links_self_href": Object {
      "operation": "ToString",
    },
    "airdate": Object {
      "format": "YYYY-MM-DD",
      "operation": "ToDate",
      "outputFormat": "YYYY-MM-DD",
    },
    "airstamp": Object {
      "format": "ISO_8601",
      "operation": "ToDate",
      "outputFormat": "YYYY-MM-DD",
    },
    "airtime": Object {
      "operation": "ToString",
    },
    "id": Object {
      "operation": "ToInteger",
    },
    "image_medium": Object {
      "operation": "ToString",
    },
    "image_original": Object {
      "operation": "ToString",
    },
    "name": Object {
      "operation": "ToString",
    },
    "number": Object {
      "operation": "ToInteger",
    },
    "runtime": Object {
      "operation": "ToInteger",
    },
    "season": Object {
      "operation": "ToInteger",
    },
    "summary": Object {
      "operation": "ToString",
    },
    "type": Object {
      "operation": "ToString",
    },
    "url": Object {
      "operation": "ToString",
    },
  },
  "relationshipFields": Array [],
  "replaced": false,
  "replacement": false,
  "sample": false,
  "skipImageScraping": false,
  "tabDestination": 0,
  "title": "newVizTest",
  "uid": "newviztest",
  "updatedAt": Any<String>,
  "updatedBy": "5a42bf07d3bc0b20648290e0",
  "updatedContent": Object {
    "created": Object {},
    "edited": Object {},
    "new": true,
    "publishedStatus": Object {},
  },
  "urls": Array [],
}
`;

exports[`Datasets API Save should save child dataset 1`] = `
Object {
  "body": Object {
    "dataset": Object {
      "JSONPath": "*",
      "_otherSources": Array [],
      "_team": Object {
        "admin": Array [
          "5a42bf07d3bc0b20648290e0",
        ],
        "brandColor": Object {
          "label": "#2A2A2A",
          "select": "#2A2A2A",
        },
        "colorPalette": Array [
          "#1B6DFC",
          "#0CB7FA",
          "#FA79FC",
          "#FB3705",
          "#F9D307",
          "#FA9007",
          "#7D5807",
          "#B2E606",
          "#069908",
          "#7B07FD",
        ],
        "datasourceDescriptions": Array [
          "5a42c26e303770207ce8f83b",
          "5b033d64ef29594d18bb18aa",
        ],
        "font": "calibre",
        "hasEnterpriseLicense": false,
        "pages": Array [
          "5ac26b456f8073766713bcee",
          "5ac26b3d6f8073766713bced",
          "5ac26b506f8073766713bcef",
          "5ac26b636f8073766713bcf0",
          "aaa26b456f8073766713bcee",
        ],
        "sites": Array [],
        "subdomain": "glitter",
        "superTeam": true,
        "title": "Glitter",
      },
      "author": "5a42bf07d3bc0b20648290e0",
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "clones": 0,
      "columns": Array [
        Object {
          "data_type": "Text",
          "name": "Image 2",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Ande Type",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Andre Field",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Image URL",
          "operation": "ToString",
        },
        Object {
          "data_type": "Number",
          "name": "Max HP",
          "operation": "ToInteger",
        },
        Object {
          "data_type": "Number",
          "name": "Max CP",
          "operation": "ToInteger",
        },
        Object {
          "data_type": "Text",
          "name": "Type 2",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Type 1",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Name",
          "operation": "ToString",
        },
        Object {
          "data_type": "Number",
          "name": "Pokemon No_",
          "operation": "ToInteger",
        },
      ],
      "contentEdited": false,
      "createdFields": Array [],
      "customFieldsToProcess": Array [],
      "dirty": 0,
      "fe_displayTitleOverrides": Object {},
      "fe_excludeFields": Object {},
      "fe_excludeFieldsObjDetail": Object {},
      "fe_fieldDisplayOrder": Array [],
      "fe_filters": Object {
        "default": Object {},
        "excludeFields": Array [],
        "fabricated": Array [],
        "fieldsAsRangeSlider": Array [],
        "fieldsCommaSeparatedAsIndividual": Array [],
        "fieldsMultiSelectable": Array [],
        "fieldsNotAvailable": Array [],
        "fieldsSortableByInteger": Array [],
        "fieldsSortableInReverseOrder": Array [],
        "keywords": Array [],
        "valuesToExcludeByOriginalKey": Object {
          "_all": Array [],
        },
      },
      "fe_image": Object {
        "detailView": true,
        "field": "",
        "gallery": true,
        "overwrite": false,
        "scraped": false,
        "timeline": true,
      },
      "fe_listed": false,
      "fe_nestedObject": Object {
        "criteria": Object {},
        "fields": Array [],
      },
      "fe_viewOptions": Object {
        "enableAccessibility": false,
        "enableLastUpdated": false,
        "filtersRail": true,
        "fullscreenExpand": true,
        "insightsExplorer": true,
        "insightsExplorerEmbed": true,
        "search": true,
        "viewControls": true,
        "viewInteractivity": true,
      },
      "fe_views": Object {
        "views": Object {},
      },
      "fe_visible": false,
      "fileName": "pokemonGO_andremon (1).csv",
      "firstImport": 1,
      "format": "CSV",
      "importRevision": 1,
      "imported": true,
      "includeEmptyFields": true,
      "isPublic": false,
      "jobId": 0,
      "openDownload": false,
      "permissions": Array [
        "seeFields",
        "seeFilters",
        "seeContent",
        "seeViews",
        "seeStandardViews",
        "seeSettings",
        "editFields",
        "editViews",
        "editGeneralSettings",
        "editObjectDetail",
        "useStandardImport",
        "useStandardSaveColumns",
        "useStandardGet",
      ],
      "preserveEditedData": true,
      "previous_datasets": Array [],
      "raw_rowObjects_coercionScheme": Object {
        "Ande Type": Object {
          "operation": "ToString",
        },
        "Andre Field": Object {
          "operation": "ToString",
        },
        "Image 2": Object {
          "operation": "ToString",
        },
        "Image URL": Object {
          "operation": "ToString",
        },
        "Max CP": Object {
          "operation": "ToInteger",
        },
        "Max HP": Object {
          "operation": "ToInteger",
        },
        "Name": Object {
          "operation": "ToString",
        },
        "Pokemon No_": Object {
          "operation": "ToInteger",
        },
        "Type 1": Object {
          "operation": "ToString",
        },
        "Type 2": Object {
          "operation": "ToString",
        },
      },
      "relationshipFields": Array [],
      "replaced": false,
      "replacement": false,
      "sample": false,
      "skipImageScraping": false,
      "tabDestination": 0,
      "updatedBy": "5a42bf07d3bc0b20648290e0",
      "updatedContent": Object {
        "created": Object {},
        "edited": Object {},
        "new": true,
        "publishedStatus": Object {},
      },
      "urls": Array [],
      "vizType": "standardViz",
    },
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Save should save custom fields 1`] = `
Object {
  "body": Object {
    "dataset": Object {
      "JSONPath": "undefined",
      "_otherSources": Array [],
      "_team": Object {
        "admin": Array [
          "5a42bf07d3bc0b20648290e0",
        ],
        "brandColor": Object {
          "label": "#2A2A2A",
          "select": "#2A2A2A",
        },
        "colorPalette": Array [
          "#1B6DFC",
          "#0CB7FA",
          "#FA79FC",
          "#FB3705",
          "#F9D307",
          "#FA9007",
          "#7D5807",
          "#B2E606",
          "#069908",
          "#7B07FD",
        ],
        "datasourceDescriptions": Array [
          "5a42c26e303770207ce8f83b",
          "5b033d64ef29594d18bb18aa",
        ],
        "font": "calibre",
        "hasEnterpriseLicense": false,
        "pages": Array [
          "5ac26b456f8073766713bcee",
          "5ac26b3d6f8073766713bced",
          "5ac26b506f8073766713bcef",
          "5ac26b636f8073766713bcf0",
          "aaa26b456f8073766713bcee",
        ],
        "sites": Array [],
        "subdomain": "glitter",
        "superTeam": true,
        "title": "Glitter",
      },
      "author": Object {
        "_articleEditors": Array [],
        "_articleViewers": Array [],
        "_editors": Array [],
        "_siteEditors": Array [],
        "_siteViewers": Array [],
        "_team": Array [
          "5a42bf30d3bc0b20648290e1",
        ],
        "_viewers": Array [],
        "activated": true,
        "active": true,
        "canCreateNewArticle": Array [],
        "canCreateNewSite": Array [],
        "canCreateNewViz": Array [],
        "defaultLoginTeam": "5a42bf30d3bc0b20648290e1",
        "email": "user@schemadesign.com",
        "firstName": "Maitland",
        "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
        "lastName": "McConnell",
        "lockUntil": 1,
        "loginAttempts": 0,
        "provider": "local",
        "salt": "test",
        "sampleImported": false,
        "signedUp": false,
      },
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "clones": 0,
      "columns": Array [
        Object {
          "data_type": "Text",
          "name": "Image URL",
          "operation": "ToString",
        },
        Object {
          "data_type": "Number",
          "name": "Max HP",
          "operation": "ToInteger",
        },
        Object {
          "data_type": "Number",
          "name": "Max CP",
          "operation": "ToInteger",
        },
        Object {
          "data_type": "Text",
          "name": "Type 2",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Type 1",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Name",
          "operation": "ToString",
        },
        Object {
          "data_type": "Number",
          "name": "Pokemon No_",
          "operation": "ToInteger",
        },
      ],
      "contentEdited": false,
      "createdFields": Array [],
      "customFieldsToProcess": Array [
        Object {
          "delimiterOnFields": Array [],
          "fieldName": "All Types",
          "fieldType": "array",
          "fieldsToMergeIntoArray": Array [
            "Type 2",
            "Type 1",
          ],
        },
      ],
      "dirty": 0,
      "fe_displayTitleOverrides": Object {
        "Type 1": "Type1_overridden",
      },
      "fe_excludeFields": Object {
        "Image URL": false,
        "Max CP": false,
        "Max HP": false,
        "Name": false,
        "Pokemon No_": false,
        "Type 1": false,
        "Type 2": false,
      },
      "fe_excludeFieldsObjDetail": Object {
        "Image URL": false,
        "Max CP": false,
        "Max HP": false,
        "Name": false,
        "Pokemon No_": false,
        "Type 1": false,
        "Type 2": false,
      },
      "fe_fieldDisplayOrder": Array [],
      "fe_filters": Object {
        "default": Object {},
        "excludeFields": Array [],
        "fabricated": Array [],
        "fieldsAsRangeSlider": Array [],
        "fieldsCommaSeparatedAsIndividual": Array [],
        "fieldsMultiSelectable": Array [],
        "fieldsNotAvailable": Array [],
        "fieldsSortableByInteger": Array [],
        "fieldsSortableInReverseOrder": Array [],
        "keywords": Array [],
        "valuesToExcludeByOriginalKey": Object {
          "_all": Array [],
        },
      },
      "fe_image": Object {
        "detailView": true,
        "field": "",
        "gallery": true,
        "overwrite": false,
        "scraped": false,
        "timeline": true,
      },
      "fe_listed": true,
      "fe_nestedObject": Object {
        "criteria": Object {},
        "fields": Array [],
      },
      "fe_viewOptions": Object {
        "enableAccessibility": false,
        "enableLastUpdated": false,
        "filtersRail": true,
        "fullscreenExpand": true,
        "insightsExplorer": true,
        "insightsExplorerEmbed": true,
        "search": true,
        "viewControls": true,
        "viewInteractivity": true,
      },
      "fe_views": Object {
        "default_view": "gallery",
        "views": Object {
          "gallery": Object {
            "defaultSortByColumnName": "Image URL",
            "visible": true,
          },
          "pieChart": Object {
            "defaultGroupByColumnName": "Name",
            "visible": true,
          },
          "pieSet": Object {
            "defaultAggregateByColumnName": "Max HP",
            "defaultChartByColumnName": "Type 1",
            "defaultGroupByColumnName": "Type 2",
            "fieldsNotAvailableAsAggregateByColumns": Array [],
            "fieldsNotAvailableAsChartByColumns": Array [],
            "fieldsNotAvailableAsGroupByColumns": Array [],
            "valuesToExcludeByOriginalKey": Array [],
            "visible": true,
          },
          "timeline": Object {
            "visible": true,
          },
          "treemap": Object {
            "defaultAggregateByColumnName": "Max HP",
            "defaultChartByColumnName": "Name",
            "defaultGroupByColumnName": "Type 1",
            "fieldsNotAvailableAsAggregateByColumns": Array [],
            "fieldsNotAvailableAsChartByColumns": Array [],
            "fieldsNotAvailableAsGroupByColumns": Array [],
            "visible": true,
          },
        },
      },
      "fe_visible": true,
      "fileName": "pokemonGO.csv",
      "firstImport": 0,
      "format": "CSV",
      "importRevision": 1,
      "imported": true,
      "includeEmptyFields": true,
      "isPublic": true,
      "jobId": 0,
      "lastImportInitiatedBy": null,
      "lastImportTriggeredBy": "manual",
      "objectTitle": "Pokemon No_",
      "openDownload": false,
      "permissions": Array [
        "seeFields",
        "seeFilters",
        "seeContent",
        "seeViews",
        "seeStandardViews",
        "seeSettings",
        "editFields",
        "editViews",
        "editGeneralSettings",
        "editObjectDetail",
        "useStandardImport",
        "useStandardSaveColumns",
        "useStandardGet",
      ],
      "preserveEditedData": true,
      "previous_datasets": Array [],
      "raw_rowObjects_coercionScheme": Object {
        "Image URL": Object {
          "operation": "ToString",
        },
        "Max CP": Object {
          "operation": "ToInteger",
        },
        "Max HP": Object {
          "operation": "ToInteger",
        },
        "Name": Object {
          "operation": "ToString",
        },
        "Pokemon No_": Object {
          "operation": "ToInteger",
        },
        "Type 1": Object {
          "operation": "ToString",
        },
        "Type 2": Object {
          "operation": "ToString",
        },
      },
      "relationshipFields": Array [],
      "replaced": false,
      "replacement": false,
      "sample": false,
      "skipImageScraping": false,
      "state": "approved",
      "tabDestination": 0,
      "title": "Pokemon",
      "uid": "pokemon",
      "updatedBy": "5a42bf07d3bc0b20648290e0",
      "updatedContent": Object {
        "created": Object {},
        "edited": Object {},
        "new": true,
        "publishedStatus": Object {},
      },
      "urls": Array [],
    },
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Save should save exclude fields 1`] = `
Object {
  "body": Object {
    "dataset": Object {
      "JSONPath": "undefined",
      "_otherSources": Array [],
      "_team": Object {
        "admin": Array [
          "5a42bf07d3bc0b20648290e0",
        ],
        "brandColor": Object {
          "label": "#2A2A2A",
          "select": "#2A2A2A",
        },
        "colorPalette": Array [
          "#1B6DFC",
          "#0CB7FA",
          "#FA79FC",
          "#FB3705",
          "#F9D307",
          "#FA9007",
          "#7D5807",
          "#B2E606",
          "#069908",
          "#7B07FD",
        ],
        "datasourceDescriptions": Array [
          "5a42c26e303770207ce8f83b",
          "5b033d64ef29594d18bb18aa",
        ],
        "font": "calibre",
        "hasEnterpriseLicense": false,
        "pages": Array [
          "5ac26b456f8073766713bcee",
          "5ac26b3d6f8073766713bced",
          "5ac26b506f8073766713bcef",
          "5ac26b636f8073766713bcf0",
          "aaa26b456f8073766713bcee",
        ],
        "sites": Array [],
        "subdomain": "glitter",
        "superTeam": true,
        "title": "Glitter",
      },
      "author": Object {
        "_articleEditors": Array [],
        "_articleViewers": Array [],
        "_editors": Array [],
        "_siteEditors": Array [],
        "_siteViewers": Array [],
        "_team": Array [
          "5a42bf30d3bc0b20648290e1",
        ],
        "_viewers": Array [],
        "activated": true,
        "active": true,
        "canCreateNewArticle": Array [],
        "canCreateNewSite": Array [],
        "canCreateNewViz": Array [],
        "defaultLoginTeam": "5a42bf30d3bc0b20648290e1",
        "email": "user@schemadesign.com",
        "firstName": "Maitland",
        "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
        "lastName": "McConnell",
        "lockUntil": 1,
        "loginAttempts": 0,
        "provider": "local",
        "salt": "test",
        "sampleImported": false,
        "signedUp": false,
      },
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "clones": 0,
      "columns": Array [
        Object {
          "data_type": "Text",
          "name": "Image URL",
          "operation": "ToString",
        },
        Object {
          "data_type": "Number",
          "name": "Max HP",
          "operation": "ToInteger",
        },
        Object {
          "data_type": "Number",
          "name": "Max CP",
          "operation": "ToInteger",
        },
        Object {
          "data_type": "Text",
          "name": "Type 2",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Type 1",
          "operation": "ToString",
        },
        Object {
          "data_type": "Text",
          "name": "Name",
          "operation": "ToString",
        },
        Object {
          "data_type": "Number",
          "name": "Pokemon No_",
          "operation": "ToInteger",
        },
      ],
      "contentEdited": false,
      "createdFields": Array [],
      "customFieldsToProcess": Array [],
      "dirty": 0,
      "fe_displayTitleOverrides": Object {
        "Type 1": "Type1_overridden",
      },
      "fe_excludeFields": Object {
        "Image URL": false,
        "Max CP": false,
        "Max HP": false,
        "Name": false,
        "Pokemon No_": false,
        "Type 1": false,
        "Type 2": false,
      },
      "fe_excludeFieldsObjDetail": Object {
        "Image URL": true,
        "Max CP": false,
        "Max HP": false,
        "Name": false,
        "Pokemon No_": false,
        "Type 1": false,
        "Type 2": false,
      },
      "fe_fieldDisplayOrder": Array [],
      "fe_filters": Object {
        "default": Object {},
        "excludeFields": Array [],
        "fabricated": Array [],
        "fieldsAsRangeSlider": Array [],
        "fieldsCommaSeparatedAsIndividual": Array [],
        "fieldsMultiSelectable": Array [],
        "fieldsNotAvailable": Array [],
        "fieldsSortableByInteger": Array [],
        "fieldsSortableInReverseOrder": Array [],
        "keywords": Array [],
        "valuesToExcludeByOriginalKey": Object {
          "_all": Array [],
        },
      },
      "fe_image": Object {
        "detailView": true,
        "field": "",
        "gallery": true,
        "overwrite": false,
        "scraped": false,
        "timeline": true,
      },
      "fe_listed": true,
      "fe_nestedObject": Object {
        "criteria": Object {},
        "fields": Array [],
      },
      "fe_viewOptions": Object {
        "enableAccessibility": false,
        "enableLastUpdated": false,
        "filtersRail": true,
        "fullscreenExpand": true,
        "insightsExplorer": true,
        "insightsExplorerEmbed": true,
        "search": true,
        "viewControls": true,
        "viewInteractivity": true,
      },
      "fe_views": Object {
        "default_view": "gallery",
        "views": Object {
          "gallery": Object {
            "defaultSortByColumnName": "Image URL",
            "visible": true,
          },
          "pieChart": Object {
            "defaultGroupByColumnName": "Name",
            "visible": true,
          },
          "pieSet": Object {
            "defaultAggregateByColumnName": "Max HP",
            "defaultChartByColumnName": "Type 1",
            "defaultGroupByColumnName": "Type 2",
            "fieldsNotAvailableAsAggregateByColumns": Array [],
            "fieldsNotAvailableAsChartByColumns": Array [],
            "fieldsNotAvailableAsGroupByColumns": Array [],
            "valuesToExcludeByOriginalKey": Array [],
            "visible": true,
          },
          "timeline": Object {
            "visible": true,
          },
          "treemap": Object {
            "defaultAggregateByColumnName": "Max HP",
            "defaultChartByColumnName": "Name",
            "defaultGroupByColumnName": "Type 1",
            "fieldsNotAvailableAsAggregateByColumns": Array [],
            "fieldsNotAvailableAsChartByColumns": Array [],
            "fieldsNotAvailableAsGroupByColumns": Array [],
            "visible": true,
          },
        },
      },
      "fe_visible": true,
      "fileName": "pokemonGO.csv",
      "firstImport": 0,
      "format": "CSV",
      "importRevision": 1,
      "imported": true,
      "includeEmptyFields": true,
      "isPublic": true,
      "jobId": 0,
      "lastImportInitiatedBy": null,
      "lastImportTriggeredBy": "manual",
      "objectTitle": "Pokemon No_",
      "openDownload": false,
      "permissions": Array [
        "seeFields",
        "seeFilters",
        "seeContent",
        "seeViews",
        "seeStandardViews",
        "seeSettings",
        "editFields",
        "editViews",
        "editGeneralSettings",
        "editObjectDetail",
        "useStandardImport",
        "useStandardSaveColumns",
        "useStandardGet",
      ],
      "preserveEditedData": true,
      "previous_datasets": Array [],
      "raw_rowObjects_coercionScheme": Object {
        "Image URL": Object {
          "operation": "ToString",
        },
        "Max CP": Object {
          "operation": "ToInteger",
        },
        "Max HP": Object {
          "operation": "ToInteger",
        },
        "Name": Object {
          "operation": "ToString",
        },
        "Pokemon No_": Object {
          "operation": "ToInteger",
        },
        "Type 1": Object {
          "operation": "ToString",
        },
        "Type 2": Object {
          "operation": "ToString",
        },
      },
      "relationshipFields": Array [],
      "replaced": false,
      "replacement": false,
      "sample": false,
      "skipImageScraping": false,
      "state": "approved",
      "tabDestination": 0,
      "title": "Pokemon",
      "uid": "pokemon",
      "updatedBy": "5a42bf07d3bc0b20648290e0",
      "updatedContent": Object {
        "created": Object {},
        "edited": Object {},
        "new": true,
        "publishedStatus": Object {},
      },
      "urls": Array [],
    },
  },
  "statusCode": 200,
}
`;

exports[`Datasets API Save should save fieldsNotAvailable, fieldsMultiselectable,
            oneToOneOverrideWithValuesByTitleByFieldName, fieldsSortableInReverseOrder 1`] = `
Object {
  "JSONPath": "undefined",
  "__v": 0,
  "_id": "5a42c26e303770207ce8f83b",
  "_otherSources": Array [],
  "_team": Object {
    "__v": 0,
    "_id": "5a42bf30d3bc0b20648290e1",
    "admin": Array [
      "5a42bf07d3bc0b20648290e0",
    ],
    "brandColor": Object {
      "label": "#2A2A2A",
      "select": "#2A2A2A",
    },
    "colorPalette": Array [
      "#1B6DFC",
      "#0CB7FA",
      "#FA79FC",
      "#FB3705",
      "#F9D307",
      "#FA9007",
      "#7D5807",
      "#B2E606",
      "#069908",
      "#7B07FD",
    ],
    "createdAt": Any<String>,
    "datasourceDescriptions": Array [
      "5a42c26e303770207ce8f83b",
      "5b033d64ef29594d18bb18aa",
    ],
    "font": "calibre",
    "hasEnterpriseLicense": false,
    "pages": Array [
      "5ac26b456f8073766713bcee",
      "5ac26b3d6f8073766713bced",
      "5ac26b506f8073766713bcef",
      "5ac26b636f8073766713bcf0",
      "aaa26b456f8073766713bcee",
    ],
    "sites": Array [],
    "subdomain": "glitter",
    "superTeam": true,
    "title": "Glitter",
    "updatedAt": Any<String>,
  },
  "author": Object {
    "__v": 0,
    "_articleEditors": Array [],
    "_articleViewers": Array [],
    "_editors": Array [],
    "_id": "5a42bf07d3bc0b20648290e0",
    "_siteEditors": Array [],
    "_siteViewers": Array [],
    "_team": Array [
      "5a42bf30d3bc0b20648290e1",
    ],
    "_viewers": Array [],
    "activated": true,
    "active": true,
    "canCreateNewArticle": Array [],
    "canCreateNewSite": Array [],
    "canCreateNewViz": Array [],
    "createdAt": Any<String>,
    "defaultLoginTeam": "5a42bf30d3bc0b20648290e1",
    "email": "user@schemadesign.com",
    "firstName": "Maitland",
    "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
    "lastName": "McConnell",
    "lockUntil": 1,
    "loginAttempts": 0,
    "provider": "local",
    "salt": "test",
    "sampleImported": false,
    "signedUp": false,
    "updatedAt": Any<String>,
  },
  "brandColor": Object {
    "accent": "#005CB5",
  },
  "clones": 0,
  "columns": Array [
    Object {
      "data_type": "Text",
      "name": "Image URL",
      "operation": "ToString",
    },
    Object {
      "data_type": "Number",
      "name": "Max HP",
      "operation": "ToInteger",
    },
    Object {
      "data_type": "Number",
      "name": "Max CP",
      "operation": "ToInteger",
    },
    Object {
      "data_type": "Text",
      "name": "Type 2",
      "operation": "ToString",
    },
    Object {
      "data_type": "Text",
      "name": "Type 1",
      "operation": "ToString",
    },
    Object {
      "data_type": "Text",
      "name": "Name",
      "operation": "ToString",
    },
    Object {
      "data_type": "Number",
      "name": "Pokemon No_",
      "operation": "ToInteger",
    },
  ],
  "contentEdited": false,
  "createdAt": Any<String>,
  "createdFields": Array [],
  "customFieldsToProcess": Array [],
  "dirty": 3,
  "fe_displayTitleOverrides": Object {
    "Type 1": "Type1_overridden",
  },
  "fe_excludeFields": Object {
    "Image URL": false,
    "Max CP": false,
    "Max HP": false,
    "Name": false,
    "Pokemon No_": false,
    "Type 1": false,
    "Type 2": false,
  },
  "fe_excludeFieldsObjDetail": Object {
    "Image URL": false,
    "Max CP": false,
    "Max HP": false,
    "Name": false,
    "Pokemon No_": false,
    "Type 1": false,
    "Type 2": false,
  },
  "fe_fieldDisplayOrder": Array [],
  "fe_filters": Object {
    "fieldsMultiSelectable": Array [
      "Name",
    ],
    "fieldsNotAvailable": Array [
      "Image URL",
    ],
    "fieldsSortableInReverseOrder": Array [
      "Name",
    ],
    "oneToOneOverrideWithValuesByTitleByFieldName": Object {
      "Type 1": Array [
        Object {
          "override": "Agua",
          "value": "Water",
        },
      ],
    },
  },
  "fe_image": Object {
    "detailView": true,
    "field": "",
    "gallery": true,
    "overwrite": false,
    "scraped": false,
    "timeline": true,
  },
  "fe_listed": true,
  "fe_nestedObject": Object {
    "criteria": Object {},
    "fields": Array [],
  },
  "fe_viewOptions": Object {
    "enableAccessibility": false,
    "enableLastUpdated": false,
    "filtersRail": true,
    "fullscreenExpand": true,
    "insightsExplorer": true,
    "insightsExplorerEmbed": true,
    "search": true,
    "viewControls": true,
    "viewInteractivity": true,
  },
  "fe_views": Object {
    "default_view": "gallery",
    "views": Object {
      "gallery": Object {
        "defaultSortByColumnName": "Image URL",
        "visible": true,
      },
      "pieChart": Object {
        "defaultGroupByColumnName": "Name",
        "visible": true,
      },
      "pieSet": Object {
        "defaultAggregateByColumnName": "Max HP",
        "defaultChartByColumnName": "Type 1",
        "defaultGroupByColumnName": "Type 2",
        "fieldsNotAvailableAsAggregateByColumns": Array [],
        "fieldsNotAvailableAsChartByColumns": Array [],
        "fieldsNotAvailableAsGroupByColumns": Array [],
        "valuesToExcludeByOriginalKey": Array [],
        "visible": true,
      },
      "timeline": Object {
        "visible": true,
      },
      "treemap": Object {
        "defaultAggregateByColumnName": "Max HP",
        "defaultChartByColumnName": "Name",
        "defaultGroupByColumnName": "Type 1",
        "fieldsNotAvailableAsAggregateByColumns": Array [],
        "fieldsNotAvailableAsChartByColumns": Array [],
        "fieldsNotAvailableAsGroupByColumns": Array [],
        "visible": true,
      },
    },
  },
  "fe_visible": true,
  "fileName": "pokemonGO.csv",
  "firstImport": 0,
  "format": "CSV",
  "importRevision": 1,
  "imported": true,
  "includeEmptyFields": true,
  "isPublic": true,
  "jobId": Any<Number>,
  "lastImportInitiatedBy": Any<String>,
  "lastImportTriggeredBy": "manual",
  "objectTitle": "Pokemon No_",
  "openDownload": false,
  "permissions": Array [
    "seeFields",
    "seeFilters",
    "seeContent",
    "seeViews",
    "seeStandardViews",
    "seeSettings",
    "editFields",
    "editViews",
    "editGeneralSettings",
    "editObjectDetail",
    "useStandardImport",
    "useStandardSaveColumns",
    "useStandardGet",
  ],
  "preserveEditedData": true,
  "previous_datasets": Array [],
  "raw_rowObjects_coercionScheme": Object {
    "Image URL": Object {
      "operation": "ToString",
    },
    "Max CP": Object {
      "operation": "ToInteger",
    },
    "Max HP": Object {
      "operation": "ToInteger",
    },
    "Name": Object {
      "operation": "ToString",
    },
    "Pokemon No_": Object {
      "operation": "ToInteger",
    },
    "Type 1": Object {
      "operation": "ToString",
    },
    "Type 2": Object {
      "operation": "ToString",
    },
  },
  "relationshipFields": Array [],
  "replaced": false,
  "replacement": false,
  "sample": false,
  "skipImageScraping": false,
  "state": "approved",
  "tabDestination": 0,
  "title": "Pokemon",
  "uid": "pokemon",
  "updatedAt": Any<String>,
  "updatedBy": "5a42bf07d3bc0b20648290e0",
  "updatedContent": Object {
    "created": Object {},
    "edited": Object {},
    "new": true,
    "publishedStatus": Object {},
  },
  "urls": Array [],
}
`;

exports[`Datasets API Save should save raw_rowObjects_coercionScheme 1`] = `
Object {
  "JSONPath": "undefined",
  "__v": 0,
  "_id": "5a42c26e303770207ce8f83b",
  "_otherSources": Array [],
  "_team": Object {
    "__v": 0,
    "_id": "5a42bf30d3bc0b20648290e1",
    "admin": Array [
      "5a42bf07d3bc0b20648290e0",
    ],
    "brandColor": Object {
      "label": "#2A2A2A",
      "select": "#2A2A2A",
    },
    "colorPalette": Array [
      "#1B6DFC",
      "#0CB7FA",
      "#FA79FC",
      "#FB3705",
      "#F9D307",
      "#FA9007",
      "#7D5807",
      "#B2E606",
      "#069908",
      "#7B07FD",
    ],
    "createdAt": "2017-12-26T21:29:20.384Z",
    "datasourceDescriptions": Array [
      "5a42c26e303770207ce8f83b",
      "5b033d64ef29594d18bb18aa",
    ],
    "font": "calibre",
    "hasEnterpriseLicense": false,
    "pages": Array [
      "5ac26b456f8073766713bcee",
      "5ac26b3d6f8073766713bced",
      "5ac26b506f8073766713bcef",
      "5ac26b636f8073766713bcf0",
      "aaa26b456f8073766713bcee",
    ],
    "sites": Array [],
    "subdomain": "glitter",
    "superTeam": true,
    "title": "Glitter",
    "updatedAt": "2017-12-26T21:43:10.717Z",
  },
  "author": Object {
    "__v": 0,
    "_articleEditors": Array [],
    "_articleViewers": Array [],
    "_editors": Array [],
    "_id": "5a42bf07d3bc0b20648290e0",
    "_siteEditors": Array [],
    "_siteViewers": Array [],
    "_team": Array [
      "5a42bf30d3bc0b20648290e1",
    ],
    "_viewers": Array [],
    "activated": true,
    "active": true,
    "canCreateNewArticle": Array [],
    "canCreateNewSite": Array [],
    "canCreateNewViz": Array [],
    "createdAt": "2017-12-26T21:28:39.946Z",
    "defaultLoginTeam": "5a42bf30d3bc0b20648290e1",
    "email": "user@schemadesign.com",
    "firstName": "Maitland",
    "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
    "lastName": "McConnell",
    "lockUntil": 1,
    "loginAttempts": 0,
    "provider": "local",
    "salt": "test",
    "sampleImported": false,
    "signedUp": false,
    "updatedAt": "2017-12-26T21:36:31.420Z",
  },
  "brandColor": Object {
    "accent": "#005CB5",
  },
  "clones": 0,
  "columns": Array [
    Object {
      "data_type": "Text",
      "name": "Image URL",
      "operation": "ToString",
      "sample": null,
    },
    Object {
      "data_type": "Text",
      "name": "Max HP",
      "operation": "ToString",
      "sample": null,
    },
    Object {
      "data_type": "Text",
      "name": "Max CP",
      "operation": "ToString",
      "sample": null,
    },
    Object {
      "data_type": "Text",
      "name": "Type 2",
      "operation": "ToString",
      "sample": null,
    },
    Object {
      "data_type": "Text",
      "name": "Type 1",
      "operation": "ToString",
      "sample": null,
    },
    Object {
      "data_type": "Text",
      "name": "Name",
      "operation": "ToString",
      "sample": null,
    },
    Object {
      "data_type": "Number",
      "name": "Pokemon No_",
      "operation": "ToInteger",
      "sample": null,
    },
  ],
  "contentEdited": false,
  "createdAt": "2017-12-26T21:43:10.707Z",
  "createdFields": Array [],
  "customFieldsToProcess": Array [],
  "dirty": 1,
  "fe_displayTitleOverrides": Object {
    "Type 1": "Type1_overridden",
  },
  "fe_excludeFields": Object {
    "Image URL": false,
    "Max CP": false,
    "Max HP": false,
    "Name": false,
    "Pokemon No_": false,
    "Type 1": false,
    "Type 2": false,
  },
  "fe_excludeFieldsObjDetail": Object {
    "Image URL": false,
    "Max CP": false,
    "Max HP": false,
    "Name": false,
    "Pokemon No_": false,
    "Type 1": false,
    "Type 2": false,
  },
  "fe_fieldDisplayOrder": Array [],
  "fe_filters": Object {
    "default": Object {},
    "excludeFields": Array [],
    "fabricated": Array [],
    "fieldsAsRangeSlider": Array [],
    "fieldsCommaSeparatedAsIndividual": Array [],
    "fieldsMultiSelectable": Array [],
    "fieldsNotAvailable": Array [],
    "fieldsSortableByInteger": Array [],
    "fieldsSortableInReverseOrder": Array [],
    "keywords": Array [],
    "valuesToExcludeByOriginalKey": Object {
      "_all": Array [],
    },
  },
  "fe_image": Object {
    "detailView": true,
    "field": "",
    "gallery": true,
    "overwrite": false,
    "scraped": false,
    "timeline": true,
  },
  "fe_listed": true,
  "fe_nestedObject": Object {
    "criteria": Object {},
    "fields": Array [],
  },
  "fe_viewOptions": Object {
    "enableAccessibility": false,
    "enableLastUpdated": false,
    "filtersRail": true,
    "fullscreenExpand": true,
    "insightsExplorer": true,
    "insightsExplorerEmbed": true,
    "search": true,
    "viewControls": true,
    "viewInteractivity": true,
  },
  "fe_views": Object {
    "default_view": "gallery",
    "views": Object {
      "gallery": Object {
        "defaultSortByColumnName": "Image URL",
        "visible": true,
      },
      "pieChart": Object {
        "defaultGroupByColumnName": "Name",
        "visible": true,
      },
      "pieSet": Object {
        "defaultAggregateByColumnName": "Max HP",
        "defaultChartByColumnName": "Type 1",
        "defaultGroupByColumnName": "Type 2",
        "fieldsNotAvailableAsAggregateByColumns": Array [],
        "fieldsNotAvailableAsChartByColumns": Array [],
        "fieldsNotAvailableAsGroupByColumns": Array [],
        "valuesToExcludeByOriginalKey": Array [],
        "visible": true,
      },
      "timeline": Object {
        "visible": true,
      },
      "treemap": Object {
        "defaultAggregateByColumnName": "Max HP",
        "defaultChartByColumnName": "Name",
        "defaultGroupByColumnName": "Type 1",
        "fieldsNotAvailableAsAggregateByColumns": Array [],
        "fieldsNotAvailableAsChartByColumns": Array [],
        "fieldsNotAvailableAsGroupByColumns": Array [],
        "visible": true,
      },
    },
  },
  "fe_visible": true,
  "fileName": "pokemonGO.csv",
  "firstImport": 0,
  "format": "CSV",
  "importRevision": 1,
  "imported": true,
  "includeEmptyFields": true,
  "isPublic": true,
  "jobId": Any<Number>,
  "lastImportInitiatedBy": "5a42bf07d3bc0b20648290e0",
  "lastImportTriggeredBy": "manual",
  "objectTitle": "Pokemon No_",
  "openDownload": false,
  "permissions": Array [
    "seeFields",
    "seeFilters",
    "seeContent",
    "seeViews",
    "seeStandardViews",
    "seeSettings",
    "editFields",
    "editViews",
    "editGeneralSettings",
    "editObjectDetail",
    "useStandardImport",
    "useStandardSaveColumns",
    "useStandardGet",
  ],
  "preserveEditedData": true,
  "previous_datasets": Array [],
  "raw_rowObjects_coercionScheme": Object {
    "Image URL": Object {
      "operation": "ToString",
    },
    "Max CP": Object {
      "operation": "ToString",
    },
    "Max HP": Object {
      "operation": "ToString",
    },
    "Name": Object {
      "operation": "ToString",
    },
    "Pokemon No_": Object {
      "operation": "ToInteger",
    },
    "Type 1": Object {
      "operation": "ToString",
    },
    "Type 2": Object {
      "operation": "ToString",
    },
  },
  "relationshipFields": Array [],
  "replaced": false,
  "replacement": false,
  "sample": false,
  "skipImageScraping": false,
  "state": "approved",
  "tabDestination": 0,
  "title": "Pokemon",
  "uid": "pokemon",
  "updatedAt": Any<String>,
  "updatedBy": "5a42bf07d3bc0b20648290e0",
  "updatedContent": Object {
    "created": Object {},
    "edited": Object {},
    "new": true,
    "publishedStatus": Object {},
  },
  "urls": Array [],
}
`;

exports[`Datasets API Update should change the title to Pokemon1 1`] = `
Object {
  "body": Object {},
  "statusCode": 200,
}
`;
